fix italic broken in blog

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@
         font-family: 'Catamaran', sans-serif;
 	}
 
+
+    article.em {
+        color: "#FF0000"
+    }
 	a {
 			color: var(--light-blue);
             font-weight: 400;
